<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/edSearch"
        android:icon="@drawable/ic_search_white_24px"
        android:title="@string/search"
        android:inputType="text"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />
    <item
        android:id="@+id/edFavorite"
        android:icon="@drawable/ic_white"
        android:title="@string/favorite"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/edSetting"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/setting"
        app:showAsAction="collapseActionView|ifRoom" />

</menu>