<?xml version="1.0" encoding="utf-8"?>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserDetails">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailCompany"
            app:layout_constraintVertical_bias="0.096">
        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

        <View
            android:id="@+id/view3"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginBottom="481dp"
            android:background="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/img_detail_photo"
            android:layout_width="152dp"
            android:layout_height="165dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/view3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view3"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/detailName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_name"
            android:layout_marginTop="2dp"
            android:textColor="@color/teal_700"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/img_detail_photo"
            app:layout_constraintStart_toStartOf="@+id/img_detail_photo"
            app:layout_constraintTop_toBottomOf="@+id/view3" />

        <TextView
            android:id="@+id/detailUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/label_user"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/detailName"
            app:layout_constraintStart_toStartOf="@+id/detailName"
            app:layout_constraintTop_toBottomOf="@+id/detailName" />

        <TextView
            android:id="@+id/detailLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/label_location"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/view4"
            app:layout_constraintEnd_toEndOf="@+id/detailUsername"
            app:layout_constraintStart_toStartOf="@+id/detailUsername"
            app:layout_constraintTop_toBottomOf="@+id/detailUsername" />

        <TextView
            android:id="@+id/detailCompany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/label_company"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/view6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view6" />

    <View
        android:id="@+id/view4"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginTop="4sp"
        app:layout_constraintBottom_toBottomOf="@+id/detailLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailLocation" />

    <View
        android:id="@+id/view6"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/detailLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_following"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/view7"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/detailLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailCompany"
        app:layout_constraintVertical_bias="0.0" />

        <View
            android:id="@+id/view8"
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            app:layout_constraintBottom_toBottomOf="@+id/detailLocation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
        android:id="@+id/detail_repo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="870"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/detail_followers"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4" />

    <TextView
        android:id="@+id/detail_following"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="989"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/detail_followers"
        app:layout_constraintTop_toBottomOf="@+id/view4" />

    <TextView
        android:id="@+id/detail_followers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="4123"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/detail_following"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/detail_repo"
        app:layout_constraintTop_toBottomOf="@+id/view4" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_repo"
        app:layout_constraintEnd_toEndOf="@+id/detail_repo"
        app:layout_constraintStart_toStartOf="@+id/detail_repo"
        app:layout_constraintTop_toBottomOf="@+id/detail_repo" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_followers"
        app:layout_constraintEnd_toStartOf="@+id/detail_following"
        app:layout_constraintStart_toEndOf="@+id/detail_repo"
        app:layout_constraintTop_toBottomOf="@+id/detail_followers" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_following"
        app:layout_constraintEnd_toEndOf="@+id/detail_following"
        app:layout_constraintStart_toStartOf="@+id/detail_following"
        app:layout_constraintTop_toBottomOf="@+id/detail_following" />

  </androidx.constraintlayout.widget.ConstraintLayout>

    <ToggleButton
        android:id="@+id/fab_add"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_margin="16dp"
        android:textOff=""
        android:textOn=""
        android:foregroundGravity="bottom"
        android:focusable="false"
        android:background="@drawable/favorite_toggle"
        android:focusableInTouchMode="false"
        app:fabSize="normal"
        app:layout_anchor="@id/view_pager"
        app:layout_anchorGravity="bottom|end"
         />
</androidx.coordinatorlayout.widget.CoordinatorLayout>

